--- a/dotnet/src/Frontend/css/widgets/CuePlayer.less
+++ b/dotnet/src/Frontend/css/widgets/CuePlayer.less
@@ -9,6 +9,7 @@
 
 .cueplayer-table {
   border-spacing: 0px;
+  overflow-y: scroll;
   width: 100%;
   tr { width: 100%; }
   th { text-align: left; }
